Fixed squashing webpage and formatted entry block
Changed boarder to vw instead of thick

--- a/project/static/entryform.css
+++ b/project/static/entryform.css
@@ -1,33 +1,45 @@
 form {
-  width:80%;
-  height:60%;
-  text-align:center;
-  font-size: 2vh;
-  margin:0 auto;
+	width: 80%;
+	height: 100%;
+	text-align: center;
+	font-size: 2vh;
+	margin: 0 auto;
 }
 input {
-  font-size: 2vh;
-  width:10vw;
+	font-size: 2vh;
+	width: 10vw;
+	border-radius: 7px;
+	border: thin groove #000000;
+	text-indent: 10px;
+	padding-left: 0px;
 }
 select {
-  font-size: 2vh;
-  width:10.1vw;
-
+	font-size: 2vh;
+	width: 10.1vw;
+	border-radius: 7px;
+	padding-left: 7px;
+	border: thin groove #000000;
 }
 
 label {
-  display: inline-block;
-  text-align:left;
-  width:10vw;
+	display: inline-block;
+	text-align: left;
+	width: 100%;
+	clear: left;
+	float: left;
+	font-size: 125%;
 }
 
 #hideButton p {
-  font-size: 12pt;
-  font-weight:bold;
-  margin-left:2vh;
+	font-size: 12pt;
+	font-weight: bold;
+	margin-left: 2vh;
+	border-width: medium;
+	border-style: solid;
+	border-radius: 16px;
 }
 #hideButton {
-  width:20%;
-  float:left;
-
+	width: 5em;
+	float: left;
+	text-align: center;
 }
