--- a/project/static/mainstructure.css
+++ b/project/static/mainstructure.css
@@ -72,24 +72,18 @@ a {
 	width: 100%;
 	margin: 0 auto;
 	float: right;
-	border-radius: 9px;
 	padding-top: 0px;
 }
 #entryBlock {
 	background-color: lightgrey;
 	float: right;
 	width: 19%;
-	height: 73%;
+	height: 74%;
 	display: block;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-	border-width: thick;
-	border-style: solid;
-	border-radius: 9px;
 	clear: left;
-	margin-top: 6px;
+	border: 0.5vw solid #DF2B1B;
+	border-radius: 9px;
+	margin-top: 1%;
 }
 /*Table interface*/
 #tableBlock {
@@ -97,5 +91,9 @@ a {
 	height: 74%;
 	float: center;
 	display: inline-block;
-	width: 80%;
+	width: 79%;
+	border-width: 0.5vw;
+	border-style: solid;
+	border-radius: 9px;
+	margin-top: 1%;
 }
