--- a/project/static/table.css
+++ b/project/static/table.css
@@ -3,10 +3,6 @@
 	width: 100%;
 	height: 100%;
 	font-family: inherit;
-	border: thick solid #DF2B1B;
-	border-radius: 9px;
-	/* [disabled]padding-top: 7px; */
-	margin-top: 6px;
 }
 #firstHeader {
 	width: 10%;
